Panels Added with animated logo

--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -2,10 +2,23 @@ html, body {
   width: 100%;
   height: 100%;
   margin: 0;
+  animation: 2s ease-in-out;
 }
 
 ::-webkit-scrollbar { 
   display: none; 
+}
+
+@keyframes wobble{
+  50%{
+    transform: rotate(90deg);
+  }
+}
+
+@keyframes glow{
+  50%{
+    opacity: 0.5;
+  }
 }
 
 #world {
@@ -21,7 +34,8 @@ html, body {
    left: 50%;
    height: 5em;
    width: 5em;
-   opacity: 0.75;
+   opacity: 0.05;
+   animation: glow 2s ease-in-out infinite;
    margin-top: -2.75em; /* Half the height */
    margin-left: -2.5em; /* Half the width */
 }
@@ -42,10 +56,17 @@ html, body {
   color: black;
 }
 
+.logoPlacement{
+  margin-top: 10em;
+  opacity: 0.75;
+  transform: rotate(-45deg);
+  animation: wobble 5s ease-in-out infinite;
+}
+
 .panelContent h2{
   font-family: 'DM Serif Text', serif;
   margin-top: 20%;
-  line-height: 2em;
+  line-height: 1.5em;
   word-spacing: 2.5px;
   color: black;
 }
@@ -56,4 +77,16 @@ html, body {
   word-spacing: 2px;
   font-size: 18px;
   color: #111;
+}
+
+#ourWork{
+  height: 95vh;
+}
+
+#whatWeDo{
+  height: 95vh;
+}
+
+#footer{
+  height: 95vh;
 }
